--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "gulp-shell": "^0.2.9",
     "gulp-uglify": "^1.0.1",
     "mocha": "^1.21.4",
-    "mocha-phantomjs": "^3.5.0",
-    "phantomjs": "^1.9.7",
+    "rimraf": "^2.2.8",
     "serve-static": "^1.6.1",
     "should": "^4.0.4"
   }
